--- a/ch2/2.2构建模型.md
+++ b/ch2/2.2构建模型.md
@@ -77,6 +77,9 @@ Rethinking: The value of storytelling. The data story has value, even if you qui
 -->
 **2.2.2 贝叶斯更新**。我们要解决的问题是用抛地球模型所得到的序列来决定地球上水的到底占多少比例。众多可能的比例就像本章一开始的例子里袋子里的小球的可能组合一样。在给定数据的情况下每种比例的可能性不同。贝叶斯模型开始的时候给这些可能性分配一系列可能性。就是所谓的先验。然后利用看到的数据去更新模型，从而得到一个后验概率。这个更新的过程其实是一种学习的过程，我们叫它贝叶斯更新。细节我们后面再讲，先来看看它的运作机制。
 
+<p align="center"> <img src="images/figure2-5.png"  width="500"/> </p>
+<p align="center">图2-5 贝叶斯模型的学习过程。每次抛地球模型都得到一个结果“W”后者“L”。模型估计的地球上水的比例在每一个可能取值的可能性。图中的曲线就是这些取值的集合。在每一个小图中都是用最新的观测值去更新前一个可能性集合（虚线），然后得到最新的可能性集合（实线）</p>
+
 <!--
 For the sake of the example only, let’s program our Bayesian machine to initially assign the same plausibility to every proportion of water, every value of p. Now look at the top-left plot in Figure 2.5. The dashed horizontal line represents this initial plausibility of each pos- sible value of p. After seeing the first toss, which is a “W,” the model updates the plausibilities to the solid line. The plausibility of p = 0 has now fallen to exactly zero—the equivalent of
 “impossible.” Why? Because we observed at least one speck of water on the globe, so now we know there is some water. The model executes this logic automatically. You don’t have it in- struct it to account for this consequence. Probability theory takes care of it for you, because it is essentially counting paths through the garden of forking data, as in the previous section.
